<resources>
    <string name="app_name">TestMvpFragmentsDaggerRetrofit</string>
    <string name="pass_tv_title">Вы можете войти, используя\nлогин и пароль от Интернет-банкинга</string>
    <string name="pass_tv_login_text">Логин</string>
    <string name="pass_et_hint_login">Введите логин</string>
    <string name="pass_tv_info">Используйте цифры и буквы латинского алфавита</string>
    <string name="pass_tv_forgot_passorlog">Не помню логин или пароль</string>
    <string name="pass_btn_resume">Продолжить</string>
    <string name="pass_et_compose_pass">Введите пароль</string>
    <string name="pass_tv_password">Пароль</string>

    <string name="id_et_idnum">Введите идентификационный номер</string>
    <string name="id_et_idnum_info">Поле не должно быть пустым!</string>
    <string name="id_tv_idnum_warning">Ошибка!</string>
    <string name="id_tv_idnum">Идентификационный номер</string>
    <string name="id_tv_mobkey">Мобильный ключ*</string>
    <string name="id_et_mobkey">Введите мобильный ключ</string>
    <string name="id_btn_resume">Продолжить</string>

    <string name="sms_tv_header">SMS-код</string>
    <string name="sms_tv_body">Для подтверждения регистрации на номер +3752911ХХХ11 будет выслано сообщение. Продолжить?</string>
    <string name="sms_btn_yes">Да, это мой номер</string>
    <string name="sms_btn_no">Нет, у меня другой номер</string>

    <string name="tel_tv_header">Номер телефона</string>
    <string name="tel_tv_body">Введите номер телефона, чтобы отправить в Банк заявку на замену номера</string>
    <string name="tel_et_num">Введите новый номер</string>
    <string name="tel_btn_send">Отправить заявку</string>


</resources>
