<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="17"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/grad_batton_orange_start"
        app:theme="@style/MyToolbarTheme"
        app:title="Регистрация"/>

    <LinearLayout
        android:id="@+id/linear_ident_for_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_id_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/iv_ident_main" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:paddingEnd="18dp"
        android:paddingStart="18dp">

        <TextView
            android:id="@+id/tv_id_idnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="50dp"
            android:gravity="start"
            android:text="@string/id_tv_idnum"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/editText_id_idnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_id_idnum"
            android:ems="10"
            android:hint="@string/id_et_idnum"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/iv_show_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_warning_black_24dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"
            android:layout_alignTop="@id/editText_id_idnum"
            android:layout_alignBottom="@id/editText_id_idnum"
            android:layout_alignEnd="@id/editText_id_idnum"/>

        <TextView
            android:id="@+id/tv__id_mobkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/editText_id_idnum"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/id_tv_mobkey"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/editText_id_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv__id_mobkey"
            android:ems="10"
            android:hint="@string/id_et_mobkey"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/iv_show_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_black_24dp"
            android:layout_marginEnd="4dp"
            android:layout_alignTop="@id/editText_id_key"
            android:layout_alignBottom="@id/editText_id_key"
            android:layout_alignEnd="@id/editText_id_key"/>

        <ImageView
            android:id="@+id/iv_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visibility_off_black_24dp"
            android:layout_marginEnd="18dp"
            android:layout_alignTop="@id/editText_id_key"
            android:layout_alignBottom="@id/editText_id_key"
            android:layout_toStartOf="@id/iv_show_info"/>



        <Button
            android:id="@+id/btn_id_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/id_btn_resume"
            android:background="@drawable/button_orange_oval"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:translationZ="15dp"/>

    </RelativeLayout>


</LinearLayout>